# MySkills

./: .gitignore  README.md
CMake/: CMake内置变量.md
CMake_Learn/: CMake操作.md
Cpp_Learn/: 变量命名.md
Docker_Learn/: 常用操作.md
Git_Learn/: readme.md
Open3d/: CMakeLists.txt  readme.md
Open3d/include/open3d/core/: SmallVector.h
Open3d/include/open3d/data/: Dataset.h
Open3d/include/open3d/pipelines/registration/: RobustKernel.h
Open3d_Learn/cpp-examples/: CMakeLists.txt
Open3d_Learn/include/open3d/: Open3DConfig.h
Open3d_Learn/include/open3d/geometry/: PointCloud.h
Open3d_Learn/include/open3d/t/pipelines/registration/: RobustKernel.h  TransformationEstimation.h
Open3d_Learn/lib/: fmt.lib
Open3d_Learn/src/: main.cpp
Qt_Learn/: readme.md
Qt_Learn/QtCmakeLearn/: CMakeLists.txt
Qt_Learn/QtCmakeLearn/cmake/: Options.cmake
Qt_Learn/QtCmakeLearn/include/: FixedAspectRatioLabel.h  testUseOpencv.h
Qt_Learn/QtCmakeLearn/qrc/: QtCmakeLearn.rc  RCa14780  res.qrc
Qt_Learn/QtCmakeLearn/src/: main.cpp  mainwindow.cpp
Qt_Learn/QtCmakeLearn/ui/: mainwindow.ui
Qt_Learn/QtModule/: CMakeLists.txt  readme.md
Qt_Learn/QtModule/include/: Camera.h  JsonConfigManager.h  MainWindow.h  TcpClient.h
Qt_Learn/QtModule/src/: Camera.cpp  MainWindow.cpp  TcpClient.cpp  main.cpp
Qt_Learn/QtQmlLearn/: CMakeLists.txt  qml.qrc  readme.md
Qt_Learn/QtQmlLearn/qml/: main.qml
Qt_Learn/QtQmlLearn/src/: main.cpp
